feat: enabled payments

--- a/indiaos/www/index.html
+++ b/indiaos/www/index.html
@@ -19,7 +19,7 @@
 			<p class="font-mono mt-8 leading-relaxed">See what's shaping the future of software, join a community connected by code and turn ideas into innovations.</p>
 			<div class="mt-8">
 				<button onclick="openModal()" href="#responsive-header" class="font-mono mt-8 font-base font-mono no-underline text-grey-darkest mr-3 bg-yellow-400 px-3 py-2 rounded border-yellow-500 border-b-4 hover:border-yellow-600">
-					Register Free
+					Register
 				</button>
 				<button onclick="window.location.href='/propose-a-talk'" target="blank" class="font-mono font-base font-mono no-underline text-grey-darkest mr-3 bg-gray-400 px-3 py-2 rounded border-gray-500 border-b-4 hover:border-gray-600 modal-close mt-3 lg:mt-0">
 					Propose a Talk
