--- a/indiaos/www/index.html
+++ b/indiaos/www/index.html
@@ -32,10 +32,10 @@
 	</div>
 </section>
 
-<section class="container mx-auto mb-24">
+<section class="container mx-auto mb-32">
 	<div id="agenda" class="bg-white py-10 px-6 lg:p-12 shadow-lg rounded-lg paper relative mx-2 lg:mx-0">
 		<h2 class="text-3xl tracking-wide font-bold">Go Deeper Into Open Source</h2>
-		<p class="font-mono mt-3 p-0 lg:pr-12 leading-relaxed">India Open Source is a free and non-commercial community event. The goal is to provide software developers and policy makers, communities and enthusiasts a platform to meet and interact. We want to see IndiaOS to grow as a platform to share and grow open source projects and to foster the values of open source in modern software development</p>
+		<p class="font-mono mt-3 p-0 leading-relaxed">India Open Source is a community event. The goal is to bring software developers, policy makers, communities and enthusiasts together, so we can learn and inspire each other. We want to see IndiaOS to grow as a platform to share and grow open source projects and to foster the values of open source in modern software development</p>
 		<h3 class="text-2xl font-bold mt-10 tracking-wide">Agenda for India<span class="tracking-wide text-yellow-500">OS</span> - 2020</h3>
 		<div class="ml-5 lg:ml-12 font-mono mt-5">
 			<ul class="list-disc yellow-list">
@@ -49,7 +49,24 @@
 	</div>
 </section>
 
-<section class="container mx-auto mb-24">
+{% if speakers %}
+<section class="container mx-auto mb-32">
+	<div>
+		<h1 class="text-3xl font-bold tracking-wide text-center mx-2">Speakers at IndiaOS</h2>
+		<div class="flex flex-wrap mt-12">
+			{% for speaker in speakers %}
+				<div class="text-center w-full w-full md:w-1/4 lg:w-1/4 mb-8">
+					<img class="rounded-full mx-auto border-8 border-white shadow-md h-48 w-48" src="{{ speaker.photo }}" alt="{{ speaker.full_name }}">
+					<p class="mt-3 text-xl font-medium text-gray-900">{{ speaker.full_name }}</p>
+					<p class="mt-1 font-medium text-gray-600">{{ speaker.designation + ' - ' + speaker.organization }}</p>
+				</div>
+			{% endfor %}
+		</div>
+	</div>
+</section>
+{% endif %}
+
+<section class="container mx-auto mb-32">
 	<div>
 		<h2 class="text-3xl font-bold tracking-wide text-center mx-2">Hosted where all the <span id="cool" class="cursor-pointer">Buzz</span> is!</h2>
 		<p class="font-mono mt-3 leading-relaxed text-center mx-12">The Indian Silicon Valley has been the breeding ground for some dominant startups and trailblazing teams <!--, placing itself as the World's 2nd Fastest Growing Startup Ecosystem. --></p>
