--- a/indiaos/www/why-indiaos.html
+++ b/indiaos/www/why-indiaos.html
@@ -9,7 +9,7 @@
 			<h1 class="text-4xl mb-12 font-bold tracking-wide mx-2">Why IndiaOS - Accelerating FOSS in India</h1>
 			<p class="font-mono mb-6 p-0 leading-relaxed">India lacks quality free and open source (FOSS) events. While there are technology events like PyCon and JSFoo, which are fantastic places to talk about technology, FOSS communities go beyond just technology. FOSS is about creation <i>and sharing</i> of technology. IndiaOS is an attempt to bring this community together, so we can learn and inspire each other. To take this community forward in new directions that we have not yet imagined.</p>
 			
-			<p class="font-mono mb-6 p-0 leading-relaxed">IndiaOS is an event focussed on the <b>creators</b> and <b>contributors</b> of FOSS. Participants can learn about new projects, success stories, how to increase adoption, best practices about design, documentation, how to sustain livelihoods and much more.</p>
+			<p class="font-mono mb-6 p-0 leading-relaxed">IndiaOS is an event focused on the <b>creators</b> and <b>contributors</b> of FOSS. Participants can learn about new projects, success stories, how to increase adoption, best practices about design, documentation, how to sustain livelihoods and much more.</p>
 			
 			<p class="font-mono mb-6 p-0 leading-relaxed">India, and the world, needs more FOSS. FOSS leads to not only savings, but sharing is a super fast way to get solutions up and ready immediately. With the amount of FOSS tools already available, we should be doing so much more either as non profits or private or public entities.</p>
 
