feat: updated for seo

--- a/indiaos/www/code-of-conduct.html
+++ b/indiaos/www/code-of-conduct.html
@@ -1,5 +1,12 @@
 {% extends "templates/conference.html" %}
+
 {% block title %}IndiaOS 2020 - Code Of Conduct{% endblock %}
+
+{% block meta %}
+<meta name="title" content="Code of Conduct - IndiaOS 2020">
+<meta name="description" content="We invite you in a spirit of curiosity, friendliness, open-mindedness, and respect, a place for meaningful discourse about building free software and open communitites.">
+{% endblock %}
+
 {% block body %}
 	<section class="container mx-auto py-12">
 		<div class="paper p-6 lg:p-12 rounded shadow-md bg-white mt-8 mx-2 lg:mx-0">
