--- a/indiaos/www/why-indiaos.html
+++ b/indiaos/www/why-indiaos.html
@@ -1,6 +1,10 @@
 {% extends "templates/conference.html" %}
 
 {% block title %}IndiaOS 2020 - An Open Source Conference{% endblock %}
+{% block meta %}
+<meta name="title" content="Why IndiaOS - IndiaOS 2020">
+<meta name="description" content="IndiaOS is an attempt to bring this community together, so we can learn and inspire each other. To take this community forward in new directions that we have not yet imagined.">
+{% endblock %}
 
 {% block body %}
 <section class="container mx-auto py-12">
