--- a/indiaos/www/index.html
+++ b/indiaos/www/index.html
@@ -6,6 +6,11 @@
 <script src="assets/indiaos/js/easter.js"></script>
 {% endblock %}
 
+{% block meta %}
+<meta name="title" content="IndiaOS 2020">
+<meta name="description" content="See what's shaping the future of software, Join a community connected by code and turn ideas into innovations.">
+{% endblock %}
+
 {% block body %}
 <section class="container mx-auto">
 	<div class="flex flex-col lg:flex-row items-center justify-between flex-wrap py-24 lg:px-0 px-6">
@@ -28,7 +33,7 @@
 			</div>
 		</div>
 		<div class="w-full lg:w-1/2 items-center p-3 lg:block hidden">
-			<img src="/assets/indiaos/img/sitting-reading.png"></img>
+			<img src="/assets/indiaos/img/sitting-reading.png" alt="Doodle Reading a Book"></img>
 		</div>
 	</div>
 </section>
