--- a/indiaos/www/travel.html
+++ b/indiaos/www/travel.html
@@ -36,31 +36,31 @@
 			<div class="flex flex-wrap mt-8">
 				<div class="text-center w-full sm:w-1/2 md:w-1/3 lg:w-1/5 mb-4">
 					<a target="blank" href="http://www.kla.kar.nic.in/vds.htm">
-					<img class="rounded-full mx-auto border-8 border-white shadow-md h-40 w-40" src="/assets/indiaos/img/city/vidhan.jpg">
+					<img class="rounded-full mx-auto border-8 border-white shadow-md h-40 w-40" src="/assets/indiaos/img/city/vidhan.jpg" alt="Vidhana Soudha">
 					<p class="mt-3 font-medium text-gray-900">Vidhana Soudha</p>
 					</a>
 				</div>
 				<div class="text-center w-full sm:w-1/2 md:w-1/3 lg:w-1/5 mb-4">
 					<a target="blank" href="https://en.wikipedia.org/wiki/Tipu_Sultan%27s_Summer_Palace">
-					<img class="rounded-full mx-auto border-8 border-white shadow-md h-40 w-40" src="/assets/indiaos/img/city/tipu.jpg">
+					<img class="rounded-full mx-auto border-8 border-white shadow-md h-40 w-40" src="/assets/indiaos/img/city/tipu.jpg" alt="Tipu Sultan's Palace">
 					<p class="mt-3 font-medium text-gray-900">Tipu Sultan's Palace</p>
 					</a>
 				</div>
 				<div class="text-center w-full sm:w-1/2 md:w-1/3 lg:w-1/5 mb-4">
 					<a target="blank" href="https://en.wikipedia.org/wiki/Cubbon_Park">
-					<img class="rounded-full mx-auto border-8 border-white shadow-md h-40 w-40" src="/assets/indiaos/img/city/cubbon.jpg">
+					<img class="rounded-full mx-auto border-8 border-white shadow-md h-40 w-40" src="/assets/indiaos/img/city/cubbon.jpg" alt="Cubbon Park">
 					<p class="mt-3 font-medium text-gray-900">Cubbon Park</p>
 					</a>
 				</div>
 				<div class="text-center w-full sm:w-1/2 md:w-1/3 lg:w-1/5 mb-4">
 					<a target="blank" href="https://www.karnatakachitrakalaparishath.com/">
-					<img class="rounded-full mx-auto border-8 border-white shadow-md h-40 w-40" src="/assets/indiaos/img/city/chitrakala_parishath.jpg">
+					<img class="rounded-full mx-auto border-8 border-white shadow-md h-40 w-40" src="/assets/indiaos/img/city/chitrakala_parishath.jpg" alt="Chitrakala Parishath">
 					<p class="mt-3 font-medium text-gray-900">Chitrakala Parishath</p>
 					</a>
 				</div>
 				<div class="text-center w-full sm:w-1/2 md:w-1/3 lg:w-1/5 mb-4">
 					<a target="blank" href="http://www.rangashankara.org/home/rangashankara/">
-					<img class="rounded-full mx-auto border-8 border-white shadow-md h-40 w-40" src="/assets/indiaos/img/city/ranga.jpg">
+					<img class="rounded-full mx-auto border-8 border-white shadow-md h-40 w-40" src="/assets/indiaos/img/city/ranga.jpg" alt="Ranga Shankara">
 					<p class="mt-3 font-medium text-gray-900">Ranga Shankara</p>
 					</a>
 				</div>
