feat: responsive agenda and speakers

--- a/indiaos/www/travel.html
+++ b/indiaos/www/travel.html
@@ -13,22 +13,22 @@
 			<div class="ml-5 lg:ml-12 font-mono mt-5">
 				<ul class="list-disc">
 					<li class="mb-2">
-						<a class="underline text-blue-900" href="https://www.zomato.com/bangalore/mavalli-tiffin-room-mtr-basavanagudi-bangalore" target="blank">Mavalli Tiffin Room (MTR)</a>
+						<a class="underline text-blue-900 cursor-pointer" href="https://www.zomato.com/bangalore/mavalli-tiffin-room-mtr-basavanagudi-bangalore" target="blank">Mavalli Tiffin Room (MTR)</a>
 					</li>
 					<li class="mb-2">
-						<a class="underline text-blue-900" href="https://www.zomato.com/bangalore/toit-indiranagar" target="blank">Toit</a>
+						<a class="underline text-blue-900 cursor-pointer" href="https://www.zomato.com/bangalore/toit-indiranagar" target="blank">Toit</a>
 					</li>
 					<li class="mb-2">
-						<a class="underline text-blue-900" href="https://www.zomato.com/bangalore/uru-brewpark-jp-nagar-bangalore" target="blank">Uru Brewpark</a>
+						<a class="underline text-blue-900 cursor-pointer" href="https://www.zomato.com/bangalore/uru-brewpark-jp-nagar-bangalore" target="blank">Uru Brewpark</a>
 					</li>
 					<li class="mb-2">
-						<a class="underline text-blue-900" href="https://www.zomato.com/bangalore/the-hole-in-the-wall-cafe-koramangala-4th-block-bangalore" target="blank">The Hole In The Wall Café</a>
+						<a class="underline text-blue-900 cursor-pointer" href="https://www.zomato.com/bangalore/the-hole-in-the-wall-cafe-koramangala-4th-block-bangalore" target="blank">The Hole In The Wall Café</a>
 					</li>
 					<li class="mb-2">
-						<a class="underline text-blue-900" href="https://www.zomato.com/bangalore/the-fatty-bao-asian-gastro-bar-indiranagar" target="blank"> The Fatty Bao</a>
+						<a class="underline text-blue-900 cursor-pointer" href="https://www.zomato.com/bangalore/the-fatty-bao-asian-gastro-bar-indiranagar" target="blank"> The Fatty Bao</a>
 					</li>
 					<li class="mb-2">
-						<a class="underline text-blue-900" href="https://www.zomato.com/bangalore/abs-absolute-barbecues-whitefield" target="blank"> AB's - Absolute Barbecues </a>
+						<a class="underline text-blue-900 cursor-pointer" href="https://www.zomato.com/bangalore/abs-absolute-barbecues-whitefield" target="blank"> AB's - Absolute Barbecues </a>
 					</li>
 				</ul>
 			</div>
