--- a/indiaos/www/index.html
+++ b/indiaos/www/index.html
@@ -6,11 +6,6 @@
 <script src="assets/indiaos/js/easter.js"></script>
 {% endblock %}
 
-{% block meta %}
-<meta name="title" content="IndiaOS 2020">
-<meta name="description" content="See what's shaping the future of software, Join a community connected by code and turn ideas into innovations.">
-{% endblock %}
-
 {% block body %}
 <section class="container mx-auto">
 	<div class="flex flex-col lg:flex-row items-center justify-between flex-wrap py-24 lg:px-0 px-6">
@@ -20,7 +15,7 @@
 				<span class="lg:hidden">Code</span>
 			</p>
 			<h1 class="text-4xl tracking-wide font-bold leading-tight mb-4">A True Spirited Open Source Conference</h1>
-			<p class="font-mono">18 January 2020 | Bangalore, India</p>
+			<p class="font-mono">18 January 2020 | Bengaluru, India</p>
 			<p class="font-mono mt-8 leading-relaxed">See what's shaping the future of software, join a community connected by code and turn ideas into innovations.</p>
 			<div class="mt-8">
 				<button onclick="openModal()" href="#responsive-header" class="font-mono mt-8 font-base font-mono no-underline text-grey-darkest mr-3 bg-yellow-400 px-3 py-2 rounded border-yellow-500 border-b-4 hover:border-yellow-600">
