--- a/indiaos/www/travel.html
+++ b/indiaos/www/travel.html
@@ -2,12 +2,38 @@
 
 {% block title %}IndiaOS 2020 - An Open Source Conference{% endblock %}
 
+{% block meta %}
+<meta itemprop="name" content="IndiaOS - 2020">
+<meta name="title" content="Your Guide to Bengaluru - IndiaOS 2020">
+<meta name="description" content="Bengaluru is loved for its pleasant weather, beautiful parks and lakes all around the town. ">
+
+<meta name="twitter:card" content="summary_large_image">
+<meta name="twitter:site" content="@indiaos">
+<meta name="twitter:title" content="Your Guide to Bengaluru">
+<meta name="twitter:description" content="Bengaluru is loved for its pleasant weather, beautiful parks and lakes all around the town. ">
+<meta name="twitter:creator" content="@indiaos">
+<meta name="twitter:card" content="summary_large_image">
+
+<!-- Twitter summary card with large image must be at least 280x150px -->
+<meta name="twitter:image:src" content="{{ frappe.utils.get_url() }}/assets/indiaos/img/social/travel.png">
+
+<!-- Open Graph data -->
+<meta property="og:title" content="Your Guide to Bengaluru" />
+<meta property="og:type" content="website" />
+<meta property="og:url" content="{{ frappe.utils.get_url() }}" />
+<meta property="og:image" content="{{ frappe.utils.get_url() }}/assets/indiaos/img/social/travel.png" />
+<meta property="og:image:width" content="800" />
+<meta property="og:image:height" content="450" />
+<meta property="og:description" content="Bengaluru is loved for its pleasant weather, beautiful parks and lakes all around the town. " />
+<meta property="og:site_name" content="IndiaOS - 2020" />
+{% endblock %}
+
 {% block body %}
 <section class="container mx-auto py-24">
 	<div>
-		<h1 class="text-4xl font-bold tracking-wide text-center mx-2">Your guide to Bangalore City</h2>
+		<h1 class="text-4xl font-bold tracking-wide text-center mx-2">Your Guide to Bengaluru City</h2>
 		<div class="map py-10 px-6 lg:p-12 rounded shadow-md bg-white mt-8 mx-2 lg:mx-0">
-			<p class="font-mono mt-3 p-0 leading-relaxed">Having evolved gradually from being the Garden City to the Silicon Valley of India, Bengaluru is the third largest and one of the most livable cities in India. Bangalore is loved for its pleasant weather, beautiful parks and lakes all around the town. The city itself has beautifully combined its rich cultural heritage with its technological and industrial accomplishments, the synthesis of which gives the city it's unique cosmopolitan identity.</p>
+			<p class="font-mono mt-3 p-0 leading-relaxed">Having evolved gradually from being the Garden City to the Silicon Valley of India, Bengaluru is the third largest and one of the most livable cities in India. Bengaluru is loved for its pleasant weather, beautiful parks and lakes all around the town. The city itself has beautifully combined its rich cultural heritage with its technological and industrial accomplishments, the synthesis of which gives the city it's unique cosmopolitan identity.</p>
 			<h3 class="text-2xl font-bold mt-10 tracking-wide text-center">Dine and Wine 🍷</h3>
 			<p class="font-mono mt-3 p-0 leading-relaxed">The city is an absolute culinary delight, you can walk into an authentic south indian restaurants for breakfast or hop into one of the several acclaimed craft breweries in the city for a cold and refreshing drink. Here are a few we recommend:</p>
 			<div class="ml-5 lg:ml-12 font-mono mt-5">
