--- a/indiaos/www/index.html
+++ b/indiaos/www/index.html
@@ -57,7 +57,7 @@
 		<div class="flex flex-wrap mt-12">
 			{% for speaker in speakers %}
 			{% if speaker.published %}
-				<div class="text-center w-full w-full md:w-1/4 lg:w-1/4 mb-8">
+				<div class="text-center w-full md:w-1/4 lg:w-1/4 mb-8">
 					<img class="rounded-full mx-auto border-8 border-white shadow-md h-48 w-48" src="{{ speaker.photo }}" alt="{{ speaker.full_name }}">
 					<p class="mt-3 text-xl font-medium text-gray-900">{{ speaker.full_name }}</p>
 					<p class="mt-1 font-medium text-gray-600">{{ speaker.designation + ' - ' + speaker.organization }}</p>
@@ -69,6 +69,41 @@
 </section>
 {% endif %}
 
+{% if talks %}
+<section class="container mx-auto mb-32">
+	<div>
+		<h1 class="text-3xl font-bold tracking-wide text-center mx-2">Talks</h2>
+		<div class="flex flex-wrap mt-12">
+			{% for talk in talks %}
+			{% if talk.published %}
+				<div class="w-full md:w-1/2 lg:w-1/3 mb-5">
+					<a href="{{ talk.route }}" class="block mx-2 bg-white p-5 rounded-lg shadow-md hover:shadow-lg">
+						<p class="text-xl font-medium text-gray-900">{{ talk.talk_title }}</p>
+						<p class="mt-1 font-medium text-gray-600">{{ talk.short_summary }}</p>
+						<div class="flex flex-row mt-3 text-gray-500">
+							<div class="flex flex-row w-4/6">
+								<img class="rounded-full border-2 border-white shadow-md h-8 w-8 mr-2 self-center" src="{{ speakers[talk.speaker].photo }}" alt="{{ speakers[talk.speaker].full_name }}" style="-webkit-filter: grayscale(100%); filter: grayscale(100%);">
+								<p class="font-mono font-medium self-center">{{ speakers[talk.speaker].full_name }}</p>
+							</div>
+							<div class="self-center w-2/6 text-right text-gray-500">
+								{% if talk.talk_type == "Talk (~15-30 mins)" %}
+									5 mins
+								{% else %}
+									30 mins
+								{% endif %}
+							</div>
+						</div>
+					</a>
+				</div>
+			{% endif %}
+			{% endfor %}
+		</div>
+		{% if settings.publish_agenda %}
+			<a href="/agenda" class="text-gray-800 underline font-mono text-center mx-auto block">View Full Agenda</a>
+		{% endif %}
+	</div>
+</section>
+{% endif %}
 <section class="container mx-auto mb-32">
 	<div>
 		<h2 class="text-3xl font-bold tracking-wide text-center mx-2">Hosted where all the <span id="cool" class="cursor-pointer">Buzz</span> is!</h2>
