fix: talk query for home page

--- a/indiaos/www/index.html
+++ b/indiaos/www/index.html
@@ -72,7 +72,7 @@
 {% if talks %}
 <section class="container mx-auto mb-32">
 	<div>
-		<h1 class="text-3xl font-bold tracking-wide text-center mx-2">Talks</h2>
+		<h1 class="text-3xl font-bold tracking-wide text-center mx-2">Talks at IndiaOS</h2>
 		<div class="flex flex-wrap mt-12">
 			{% for talk in talks %}
 			{% if talk.published %}
