--- a/indiaos/www/index.html
+++ b/indiaos/www/index.html
@@ -113,10 +113,10 @@
 			<div class="flex flex-col md:flex-row">
 				<div class="w-full lg:w-3/5">
 					<h3 class="text-2xl font-bold tracking-wide">Venue</h3>
-					<p class="leading-relaxed mt-3">Zerodha, #175/176,
-					Next to Rainbow Hospital<br>
-					Bannergatta Road, Bilekahalli<br>
-					Bengaluru - 560076</p>
+					<p class="leading-relaxed mt-3">Zerodha, #153/154,
+					4th Cross, J.P Nagar 4th Phase<br>
+					Opp. Clarence Public School<br>
+					Bengaluru - 560078</p>
 				</div>
 				<div class="w-full lg:w-2/5 mt-5 lg:mt-0">
 					<h3 class="text-2xl font-bold tracking-wide">Date</h3>
