refactor: hero lines

--- a/indiaos/www/index.html
+++ b/indiaos/www/index.html
@@ -16,7 +16,7 @@
 			</p>
 			<h1 class="text-4xl tracking-wide font-bold leading-tight mb-4">A True Spirited Open Source Conference</h1>
 			<p class="font-mono">18 January 2020 | Bengaluru, India</p>
-			<p class="font-mono mt-8 leading-relaxed">See what's shaping the future of software, join a community connected by code and turn ideas into innovations.</p>
+			<p class="font-mono mt-8 leading-relaxed">See what's shaping the future of software, join a community of makers and creators and turn ideas into innovations.</p>
 			<div class="mt-8">
 				<button onclick="openModal()" href="#responsive-header" class="font-mono mt-8 font-base font-mono no-underline text-grey-darkest mr-3 bg-yellow-400 px-3 py-2 rounded border-yellow-500 border-b-4 hover:border-yellow-600">
 					Register
