--- a/indiaos/www/index.html
+++ b/indiaos/www/index.html
@@ -78,12 +78,12 @@
 			{% if talk.published %}
 				<div class="w-full md:w-1/2 lg:w-1/3 mb-5">
 					<a href="{{ talk.route }}" class="block mx-2 bg-white p-5 rounded-lg shadow-md hover:shadow-lg">
-						<p class="text-xl font-medium text-gray-900">{{ talk.talk_title }}</p>
+						<p class="text-xl font-medium text-gray-900 truncate">{{ talk.talk_title }}</p>
 						<p class="mt-1 font-medium text-gray-600">{{ talk.short_summary }}</p>
 						<div class="flex flex-row mt-3 text-gray-500">
 							<div class="flex flex-row w-4/6">
 								<img class="rounded-full border-2 border-white shadow-inner h-8 w-8 mr-2 self-center" src="{{ speakers[talk.speaker].photo }}" alt="{{ speakers[talk.speaker].full_name }}">
-								<p class="font-mono font-medium self-center">{{ speakers[talk.speaker].full_name }}</p>
+								<p class="font-mono font-medium self-center truncate">{{ speakers[talk.speaker].full_name }}</p>
 							</div>
 							<div class="self-center w-2/6 text-right text-gray-500">
 								{% if talk.talk_type == "Talk (~15-30 mins)" %}
