chore: remove propose a talk

--- a/indiaos/www/index.html
+++ b/indiaos/www/index.html
@@ -22,9 +22,9 @@
 					Register
 				</button>
 				<!-- <p class="font-mono font-bold">Registrations Open 16th November</p> -->
-				<button onclick="window.location.href='/propose-a-talk'" target="blank" class="font-mono font-base font-mono no-underline text-grey-darkest mr-3 bg-gray-400 px-3 py-2 rounded border-gray-500 border-b-4 hover:border-gray-600 modal-close mt-3 lg:mt-0">
+<!-- 				<button onclick="window.location.href='/propose-a-talk'" target="blank" class="font-mono font-base font-mono no-underline text-grey-darkest mr-3 bg-gray-400 px-3 py-2 rounded border-gray-500 border-b-4 hover:border-gray-600 modal-close mt-3 lg:mt-0">
 					Propose a Talk
-				</button>
+				</button> -->
 			</div>
 		</div>
 		<div class="w-full lg:w-1/2 items-center p-3 lg:block hidden">
