--- a/indiaos/www/index.html
+++ b/indiaos/www/index.html
@@ -110,10 +110,11 @@
 			<div class="flex flex-col md:flex-row">
 				<div class="w-full lg:w-3/5">
 					<h3 class="text-2xl font-bold tracking-wide">Venue</h3>
-					<p class="leading-relaxed mt-3">Zerodha, #153/154,
-					4th Cross, J.P Nagar 4th Phase<br>
-					Opp. Clarence Public School<br>
-					Bengaluru - 560078</p>
+					<a class="underline text-blue-900 cursor-pointer" target="blank" href="https://maps.app.goo.gl/JriThCGqYWQCaV9V7">
+						<p class="leading-relaxed mt-3">Balan Farm Convention Center<br>
+						Nataraja Layout, Kothnur, JP Nagar 8th Phase<br>
+						Bengaluru - 560 078 </p>
+					</a>
 				</div>
 				<div class="w-full lg:w-2/5 mt-5 lg:mt-0">
 					<h3 class="text-2xl font-bold tracking-wide">Date</h3>
