--- a/indiaos/www/index.html
+++ b/indiaos/www/index.html
@@ -23,8 +23,11 @@
 					Register
 				</button>
 				{% else %}
-				<p class="font-mono font-bold">Registrations Closed</p>
+				<!-- <p class="font-mono font-bold">Registrations Closed</p> -->
 				{% endif %}
+				<a href="https://forum.indiaos.in" target="_blank" class="font-base font-mono no-underline text-grey-darkest bg-yellow-400 px-3 py-2 rounded border-yellow-500 border-b-4 hover:border-yellow-600">
+					Join Our Forum
+				</a>
 <!-- 				<button onclick="window.location.href='/propose-a-talk'" target="blank" class="font-mono font-base font-mono no-underline text-grey-darkest mr-3 bg-gray-400 px-3 py-2 rounded border-gray-500 border-b-4 hover:border-gray-600 modal-close mt-3 lg:mt-0">
 					Propose a Talk
 				</button> -->
